add postgres container

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 
 ### NGINX #################################################
 
-NGINX_PORT=8082
+NGINX_PORT=1111
 
 ### MYSQL #################################################
 
@@ -15,8 +15,17 @@ MYSQL_DATABASE=main
 MYSQL_PASSWORD=secret
 MYSQL_ROOT_PASSWORD=secret
 
+### POSTGRES ##############################################
+
+POSTGRES_VERSION=12-alpine
+POSTGRES_PORT=5433
+POSTGRES_DATABASE=main
+POSTGRES_USER=laravel
+POSTGRES_PASSWORD=secret
+
 ### REDIS #################################################
 
+REDIS_VERSION=latest
 REDIS_PORT=6379
 
 ### NPM ###################################################
