--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,13 +33,23 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      SERVICE_TAG: dev
-      SERVICE_NAME: mysql
+    networks:
+      - laravel
+
+  postgres:
+    image: postgres:${POSTGRES_VERSION}
+    container_name: postgres
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    environment:
+      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - laravel
 
   redis:
-    image: redis:latest
+    image: redis:${REDIS_VERSION}
     container_name: redis
     ports:
       - "${REDIS_PORT}:6379"
