--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "443:443"
     volumes:
       - ./src:/var/www/html
+      - ./logs/nginx:/var/log/nginx
     depends_on:
       - php
       - mysql
