add phpmyadmin container

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,14 @@ REDIS_PORT=6379
 ### NPM ###################################################
 
 NODE_VERSION=13.7
+
+### PHPMYADMIN ############################################
+
+PMA_USER=laravel
+PMA_PASSWORD=secret
+PMA_ROOT_PASSWORD=secret
+PMA_PORT=8081
+PMA_MAX_EXECUTION_TIME=600
+PMA_MEMORY_LIMIT=256M
+PMA_UPLOAD_LIMIT=2G
+PMA_ARBITRARY=1
