--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,4 +127,22 @@ services:
     networks:
       - laravel
 
+  phpmyadmin:
+    image: phpmyadmin
+    container_name: phpmyadmin
+    ports:
+      - "${PMA_PORT}:80"
+    environment:
+      PMA_ARBITRARY: ${PMA_ARBITRARY}
+      MYSQL_USER: ${PMA_USER}
+      MYSQL_PASSWORD: ${PMA_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${PMA_ROOT_PASSWORD}
+      MAX_EXECUTION_TIME: ${PMA_MAX_EXECUTION_TIME}
+      MEMORY_LIMIT: ${PMA_MEMORY_LIMIT}
+      UPLOAD_LIMIT: ${PMA_UPLOAD_LIMIT}
+    depends_on:
+      - mysql
+    networks:
+      - laravel
+
 
