--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,11 @@
 
 ### NGINX #################################################
 
-NGINX_PORT=1111
+NGINX_PORT=8080
+
+### PHP #################################################
+
+PHP_VERSION=8.0
 
 ### MYSQL #################################################
 
